--- a/zuul-gateway-dev.properties
+++ b/zuul-gateway-dev.properties
@@ -3,6 +3,8 @@ server.port=8002
 zuul.prefix=/app
 zuul.routes.user.service-id=user-service
 zuul.routes.user.strip-prefix=false
+zuul.routes.user.service-id=chat-service
+zuul.routes.user.strip-prefix=false
 hystrix.metrics.enabled=true
 hystrix.enabled=true
 management.endpoint.hystrix.stream.enabled=true
