zuul config headers

--- a/zuul-gateway-dev.properties
+++ b/zuul-gateway-dev.properties
@@ -1,6 +1,7 @@
 spring.application.name=zuul-gateway
 server.port=8002
 zuul.prefix=/app
+zuul.ignored-headers=Access-Control-Allow-Credentials, Access-Control-Allow-Origin
 zuul.routes.user.service-id=user-service
 zuul.routes.user.strip-prefix=false
 zuul.routes.chat.service-id=chat-service
