--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -13,6 +13,6 @@ spring:
     gateway:
       routes:
       - id: chat-service
-        uri: lb://CHAT-SERVICE
+        uri: lb://chat-service
         predicates:
-        - Path=/chat-service/**
+        - Path=/chat-service/
