--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -13,6 +13,6 @@ spring:
     gateway:
       routes:
       - id: chat-service
-        uri: http://localhost:8007
-        predicates:
-        - Path=/chat-service/
+        uri: localhost:8007
+        #predicates:
+        #- Path=/chat-service/
