--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -13,4 +13,4 @@ spring:
       - id: chat-service
         uri: http://localhost:8007
         predicates:
-        - Path=/chat-service/
+        - Path=/chat-service/**
