--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -13,5 +13,5 @@ spring:
       - id: chat-service
         uri: lb://CHAT-SERVICE
         predicates:
-        - Path=/chat-service/**
+        - Path=/chat/**
         - Method=GET,POST
