--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -15,4 +15,4 @@ spring:
         predicates:
         - Path=/chat-service/**
         filters:
-        - RewritePath=/chat-service/(?.*), /${remains}
+        - RewritePath=/chat-service/**, /${remains}
