--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -11,7 +11,7 @@ spring:
     gateway:
       routes:
       - id: chat-service
-        uri: http://localhost:8007
+        uri: lb://CHAT-SERVICE
         predicates:
         - Path=/chat-service/**
         #filters:
