--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -19,8 +19,8 @@ spring:
         - Path=/chat-service/**
         #filters:
         #- RewritePath=/chat-service/**, /${remains}
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*'
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: "*'
