--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -14,7 +14,7 @@ spring:
           enabled: true
       routes:
       - id: chat-service
-        uri: lb://chat-service
+        uri: lb://CHAT-SERVICE
         predicates:
         - Path=/chat-service/**
         #filters:
