--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -9,6 +9,11 @@ spring:
     name: ws-gateway
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods: "*"
       discovery:
         locator:
           enabled: true
