--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -9,10 +9,13 @@ spring:
     name: ws-gateway
   cloud:
     gateway:
-      #globalcors:
-      #  corsConfigurations:
-      #    '[/**]':
-      #      allowedOrigins: "http://localhost:3000/"
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods:
+            - GET
+            - POST
       discovery:
         locator:
           enabled: true
