--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -12,7 +12,7 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins: "*"
+            allowedOrigins: *
             allowedMethods:
             - GET
             - POST
