--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -12,7 +12,7 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-            #allowedOrigins: "*"
+            allowedOrigins: "*"
             allowedMethods:
             - GET
             - POST
@@ -24,8 +24,8 @@ spring:
         uri: lb://CHAT-SERVICE
         predicates:
         - Path=/chat-service/**
-        #filters:
-        #- RewritePath=/chat-service/**, /${remains}
+        filters:
+        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
 #management:
 #  endpoints:
 #    web:
