--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -9,13 +9,13 @@ spring:
     name: ws-gateway
   cloud:
     gateway:
-      #globalcors:
-      #  corsConfigurations:
-      #    '[/**]':
-      #      allowedOrigins: "*"
-      #      allowedMethods:
-      #      - GET
-      #      - POST
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods:
+            - GET
+            - POST
       discovery:
         locator:
           enabled: true
@@ -24,8 +24,8 @@ spring:
         uri: lb://CHAT-SERVICE
         predicates:
         - Path=/chat-service/**
-        #filters:
-        #- DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+        filters:
+        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
 #management:
 #  endpoints:
 #    web:
