--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -25,7 +25,7 @@ spring:
         predicates:
         - Path=/chat-service/**
         filters:
-        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+        - DedupeResponseHeader=Access-Control-Allow-Origin
 #management:
 #  endpoints:
 #    web:
