--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -27,7 +27,7 @@ spring:
         - Path=/chat-service/**
         filters:
         - AddResponseHeader=Access-Control-Allow-Origin, *
-        #- DedupeResponseHeader=Access-Control-Allow-Origin
+        - DedupeResponseHeader=Access-Control-Allow-Origin
 #management:
 #  endpoints:
 #    web:
