--- a/ws-gateway-dev.yml
+++ b/ws-gateway-dev.yml
@@ -9,8 +9,8 @@ spring:
     name: ws-gateway
   cloud:
     gateway:
-      globalcors:
-        add-to-simple-url-handler-mapping: true
+      #globalcors:
+        #add-to-simple-url-handler-mapping: true
         #corsConfigurations:
           #'[/**]':
             #allowedOrigins: '*'
@@ -26,11 +26,12 @@ spring:
         uri: lb://CHAT-SERVICE
         predicates:
         - Path=/chat-service/**
-        filters:
+        #filters:
         #- AddResponseHeader=Access-Control-Allow-Origin, *
         #- DedupeResponseHeader=Access-Control-Allow-Origin
-#management:
-#  endpoints:
-#    web:
-#      exposure:
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 #        include: "*'
